--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         /* Background */
 
          body {
-         background: url('https://cdn.discordapp.com/attachments/1151159745621803049/1151860862961856593/background.jpg');
+         background: url('https://images-ext-1.discordapp.net/external/1JgxPxbxT598q1RG55cD4K5wAfYdBhlWmZXwHbvEZYo/https/tr.rbxcdn.com/30DAY-Avatar-F1E6A53FB3C9393FA6854BA582AC3C08-Png/150/150/Avatar/Png/noFilter?format=webp');
          background-repeat: no-repeat;
          background-size: cover;
          background-color: #000;
